[BZ #633]

2005-01-06  Roland McGrath  <roland@redhat.com>
	[BZ #633]
	* sysdeps/unix/sysv/linux/futimes.c (__futimes): Catch errno values
	indicating file-name lookup errors, and return ENOSYS or EBADF instead.